<resources>
    <string name="app_name">EasyPay</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="signin_error_message" />
    <string name="menu_iv_calculator" />
    <string name="menu_type_chart" />
    <string name="item">Item</string>
    <string name="action_settings" />
    <string name="login_here">login here</string>
    <string name="contact">Contact</string>
    <string name="current_balance">Current Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="transfer">transfer</string>
    <string name="textview">TextView</string>
    <string name="pending_transactions">Pending Transactions</string>
    <string name="completed_transactions">Completed Transactions</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="logout">Logout</string>
    <string name="account_number">Account number</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="send">Send</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="saved_recipients">Saved recipients</string>
    <string name="pay">Pay</string>
    <string name="description">Description</string>
    <string name="sort_code">Sort code</string>
    <string name="account_num">Account num</string>
    <string name="save_to_recipients">Save to recipients</string>
    <string name="amount">Amount</string>
    <string name="select_recipient">Select recipient</string>
    <string name="selected_recipient">Selected recipient</string>
    <string name="fast_input_label" />
    <string name="cancel">Cancel</string>
    <string name="approve">approve</string>
    <string name="add_recipient">Add recipient</string>
    <string name="header_title">Welcome</string>
    <string name="header_text">name</string>
    <string name="Logout">Communicate</string>
    <string name="sign_out">Sign out</string>
    <string name="nav_open">nav open</string>
    <string name="nav_close">nav close</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Black Fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="transaction">Transaction</string>
    <string name="add_recipients">Add recipients</string>
    <string name="recipients">Recipients</string>
    <string name="settings_preference">preference_settings</string>
    <string name="filter_payments">Filter payments</string>
    <string name="settings">Settings</string>
    <string name="profile_information">Profile Information</string>
    <string name="first_name">First name</string>
    <string name="food">Food</string>
    <string name="clothes">Clothes</string>
    <string name="utilities">Utilities</string>
    <string name="consumer_loan">Consumer loan</string>
    <string name="purchase_consumer_goods_or_services_immediately">Purchase consumer goods or services immediately</string>
    <string name="mortgage_auto_loan_education_loan_personal_loan_refinance_loan_and_credit_card">Mortgage, auto loan, education loan, personal loan, refinance loan, and credit card</string>
    <string name="apply_now">Apply now</string>
    <string name="immediate_car_loans">Immediate car loans</string>
    <string name="buy_a_car">Buy a car</string>
    <string name="car_loan">Car loan</string>
    <string name="credit_builder_loan">Credit builder loan</string>
    <string name="apply_for_loan">Apply for loan</string>
</resources>