<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/data">
        <item
            android:id="@+id/nav_moves"
            android:icon="@drawable/ic_transaction"
            android:title="@string/approve" />
        <item
            android:id="@+id/nav_abilities"
            android:icon="@drawable/ic_transaction"
            android:title="@string/approve" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_transaction"
            android:title="@string/approve" />

    </group>

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_transaction"
            android:title="@string/approve" />

        <item
            android:id="@+id/nav_help_and_feedback"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>

    <group>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/sign_out" />
    </group>


</menu>
