<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TransactionFragment">

    <LinearLayout
        android:id="@+id/linearLayoutAddRecipient"
        android:layout_width="398dp"
        android:layout_height="103dp"
        android:background="@color/primaryColor"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Add recipient"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/recipient_account_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/account_number"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/recipient_sort_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sort_code"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/recipient_name"
        tools:layout_editor_absoluteY="450dp" />

    <EditText
        android:id="@+id/recipient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/recipient_account_number"
        tools:layout_editor_absoluteY="377dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/round_button"
        android:onClick="sendTransaction"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>