<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashboardFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="397dp"
        android:layout_height="184dp"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        android:paddingStart="72dp"
        android:paddingTop="25dp"
        android:paddingEnd="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/current_balance"
            android:textColor="@color/fadedText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_22_480"
            android:textColor="@color/primaryTextColor"
            android:textSize="46sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:alpha="128"
            android:text="@string/available_balance"
            android:textColor="@color/fadedText"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_22_480"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/secondaryColor"
        android:contentDescription="@string/transfer"
        android:src="@drawable/ic_swap"
        android:tint="@color/primaryTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
        app:rippleColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="396dp"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>